# latest_ai_fin

./: .env.example  .replit  README.md  app.py  package-lock.json  package.json  pyproject.toml  replit.nix  run.py  theme.json
api/: __init__.py  dependencies.py  init.py  main.py
api/routers/: __init__.py  ai.py  auth.py  documents.py  investments.py  news.py  risk.py  users.py
app/: main.py
app/core/: config.py
app/db/: base.py
app/models/: __init__.py  document.py  risk_analysis.py  user.py
app/templates/: base.html  index.html  login.html  register.html
attached_assets/: Pasted--Process-SpawnProcess-1-Traceback-most-recent-call-last-File-home-yash-anaconda3-envs-latest-1741966630583.txt  Pasted--python-run-py-INFO-Will-watch-for-changes-in-these-directories-home-yash-Desktop-Projects-1741966434146.txt  Pasted-p-ython-run-py-INFO-Will-watch-for-changes-in-these-directories-home-yash-Desktop-Projects-1741966272129.txt
backend/: __init__.py  config.py  database.py  filters.py  security.py
backend/core/: __init__.py  config.py
backend/models/: __init__.py  document.py  risk_analysis.py  user.py
backend/services/: __init__.py  ai_service.py  document_service.py  investment_service.py  news_service.py  risk_analysis_service.py
client/: index.html
client/src/: App.tsx  index.css
frontend/templates/: ai_advisor.html  base.html  dashboard.html  documents.html  index.html  investments.html  login.html  profile.html  register.html  risk_analysis.html
server/: auth.ts  routes.ts  storage.ts
server/services/: aiService.ts  (+4 more)
shared/: schema.ts
(+29 files in other folders)
